<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Virtual Keycard</string>
    <string name="action_settings">Settings</string>
    <string name="show_status_header">Status of Virtual Keycard</string>
    <string name="button_refresh">Refresh!</string>
    <string name="title_activity_create_pin_persistent">Create Pin Persistent</string>
    <string name="create_pin_persistent_header">Create new PIN</string>
    <string name="new_pin">New PIN: </string>
    <string name="new_pin_again">New PIN again: </string>
    <string name="new_unblock_value">Unblock PIN: </string>
    <string name="new_unblock_value_again">Unblock PIN again: </string>
    <string name="max_attempts">Max attempts: </string>
    <string name="button_set_pin">Set PIN!</string>
    <string name="title_activity_last_login_try_with_gui">Login / Unblock</string>
    <string name="button_login_unblock">Login / Unblock</string>
</resources>
